--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -107,7 +107,7 @@ h2 {
   }
 }
 .parallax {
-  background-image: url('../images/coffee-landscape.jpg');
+  background-image: url('https://res.cloudinary.com/dhzkb38hm/image/upload/v1604249057/512px_820bf1f290.png');
   background-attachment: fixed;
   background-position: 60% 50%;
   background-repeat: no-repeat;
