--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -14,6 +14,7 @@
     }
     .menu-header {
       cursor: pointer;
+      margin: 0px 5px 0px;
       border-bottom: 1px solid #000;
       padding: 0;
       line-height: 20px;
