header color changed

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,7 +3,7 @@ header {
   z-index: 10;
   height: 50px;
   width: 100%;
-  background-color: $green;
+  background-color: #000000;
   color: #fff;
   display: flex;
   align-items: center;
