footer color changed

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -6,7 +6,7 @@ footer {
   justify-content: center;
   margin: 0;
   padding: 0;
-  background-color: $green;
+  background-color: #000000;
   color: #fff;
   section {
     display: flex;
